--- a/grammar/forge_grammar.tt
+++ b/grammar/forge_grammar.tt
@@ -3,7 +3,7 @@ grammar ForgeGrammar
   rule forge
     list 1..1 {
       def content
-        [:list, elements[0].content]
+        { :name => :list , :content => elements[0].content }
       end
     }
   end
@@ -25,13 +25,13 @@ grammar ForgeGrammar
   rule expr
     elemt mods {
       def content
-        elements[0].content + [elements[1].content]
+        elements[0].content.merge({ :mods => elements[1].content })
       end
     }
     /
     elemt 1..1 {
       def content
-        elements[0].content + [[]]
+        elements[0].content.merge({ :mods => [] })
       end
     }
   end
@@ -39,31 +39,31 @@ grammar ForgeGrammar
   rule elemt
     "[" array "]" {
       def content
-        [:s_array, elements[1].content]
+        { :name => :s_array , :content => elements[1].content }
       end
     }
     /
     "{" array "}" {
       def content
-        [:c_array, elements[1].content]
+        { :name => :c_array , :content => elements[1].content }
       end
     }
     /
     float !word {
       def content
-        [:float, elements[0].content]
+        { :name => :float , :content => elements[0].content }
       end
     }
     /
     word 1..1 {
       def content
-        [:word, elements[0].content]
+        { :name => :word , :content => elements[0].content }
       end
     }
     /
     sym 1..1 {
       def content
-        [:sym, elements[0].content]
+        { :name => :sym , :content => elements[0].content }
       end
     }
   end
@@ -85,19 +85,19 @@ grammar ForgeGrammar
   rule mod
     '*' nat {
       def content
-        [:mult, elements[1].content]
+        { :name => :mult , :content => elements[1].content }
       end
     }
     /
     '/' float {
       def content
-        [:div, elements[1].content]
+        { :name => :div , :content => elements[1].content }
       end
     }
     /
     '(' nat ',' nat ')' {
       def content
-        [:spread, elements[1].content, elements[3].content]
+        { :name => :spread , :content => { :ammount => elements[1].content , :per => elements[3].content } }
       end
     }
   end
