Remove the empty list anvil and resolve #41. Also resolve #37 and resolve #38.

--- a/grammar/forge_grammar.tt
+++ b/grammar/forge_grammar.tt
@@ -9,7 +9,7 @@ grammar ForgeGrammar
     /
     pos_ws 1..1 {
       def content
-        { :name => :empty_list }
+        { :name => :list , :content => [{ :name => :silence , :release => 1.0 , :mods => [] }].ring }
       end
     }
   end
