--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -111,7 +111,7 @@ a {
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   margin-top: 2rem;
   margin-bottom: 1rem;
-  font-weight: normal;
+  font-weight: bold;
   color: #cc00cc; 
   text-align: center; }
 .main-content p {
